--- a/big3.html
+++ b/big3.html
@@ -22,9 +22,9 @@
   </ul>
     <!-- starting images of classes  -->
   <div class="B">
-    <img id="a" src="/Images/🍃Naruto Poster by lassah🍃.jpeg">
-    <img id="a"src="/images2/OP.jpeg">
-    <img id="a"src="/Images/Bleach minimalist poster.jpeg">
+    <img id="a" src="Images/🍃Naruto Poster by lassah🍃.jpeg">
+    <img id="a"src="images2/OP.jpeg">
+    <img id="a"src="Images/Bleach minimalist poster.jpeg">
       <!-- ending images of classes  -->
     <center>
     <table id="C">
