photo path change

--- a/big3.html
+++ b/big3.html
@@ -55,9 +55,9 @@
      starting images of classes  -->
   <div class="B">
     
-    <img id="a" src="/Images/🍃Naruto Poster by lassah🍃.jpeg">
-    <img id="a"src="/images2/OP.jpeg">
-    <img id="a"src="/Images/Bleach minimalist poster.jpeg">
+    <img id="a" src="Images/🍃Naruto Poster by lassah🍃.jpeg">
+    <img id="a"src="images2/OP.jpeg">
+    <img id="a"src="Images/Bleach minimalist poster.jpeg">
       <!-- ending images of classes  -->
 
   </div>
