--- a/movies.html
+++ b/movies.html
@@ -58,7 +58,7 @@
     <div class="CD">
       <h2 id="e">A Silent Voice</h2>
       <video id ="f"controls  >
-        <source src="/videos/A Silent Voice - Official Trailer (720p).mp4" type="video/mp4">
+        <source src="videos/A Silent Voice - Official Trailer (720p).mp4" type="video/mp4">
       </video>
           <p id="g">"A Silent Voice" is a Japanese animated film based on the manga of the same name. It explores themes of redemption, forgiveness, and communication difficulties, particularly related to deafness and bullying. The story follows the complex relationship between a former bully and his deaf classmate. <br /> <center><b>
       Director : Naoko Yamada.<br />
@@ -76,7 +76,7 @@
   <div class="CD">
     <h2 id="e">5 Centimeters Per Second</h2>
     <video id="f"controls >
-      <source src="/videos/5 Centimeters Per Second Trailer (720p).mp4" type="video/mp4">
+      <source src="videos/5 Centimeters Per Second Trailer (720p).mp4" type="video/mp4">
     </video>
     <p id="g">"5 Centimeters Per Second" is a Japanese animated film directed by Makoto Shinkai. Released in 2007, it's known for its beautiful visuals and poignant storytelling, exploring themes of love and distance.<br />
     <center><b>
@@ -93,7 +93,7 @@
   <div class="CD">
     <h2 id="e">Hello World</h2>
     <video id="f" controls >
-      <source src="/videos/映画『HELLO WORLD（ハロー・ワールド）』予告【2019年9月20日(金)公開】 (720p).mp4" type="video/mp4">
+      <source src="videos/映画『HELLO WORLD（ハロー・ワールド）』予告【2019年9月20日(金)公開】 (720p).mp4" type="video/mp4">
 
 </video>
     <p id="g">"Hello World" follows the story of a young man named Naomi who discovers that he can communicate with his past self through his smartphone. As he navigates this newfound ability, he unravels a complex web of relationships, time travel, and the impact of his choices on the future. The film combines elements of romance and science fiction, creating a thought-provoking narrative.<br />
@@ -110,7 +110,7 @@
   <div class="CD">
     <h2 id="e">I Want To Eat Your Pancreas</h2>
     <video id="f" controls >
-    <source src="/videos/I Want To Eat Your Pancreas - Official Theatrical Trailer (720p).mp4" type="video/mp4">
+    <source src="videos/I Want To Eat Your Pancreas - Official Theatrical Trailer (720p).mp4" type="video/mp4">
     </video>
     <p id="g"> "I Want to Eat Your Pancreas" is a Japanese novel and later adapted into an anime film. The title might sound strange, but it's metaphorical. The story revolves around two characters, one with a terminal illness (pancreas) and the other discovering and dealing with it. The narrative explores themes of life, death, and human connections. It's a poignant and emotional tale of friendship and the fleeting nature of life.<br /> <center><b>
     Director : Shinchiro Ushijima <br />
@@ -124,7 +124,7 @@
   <div class="CD">
     <h2 id="e">Ride Your Wave</h2>
     <video id="f" controls >
-      <source src="/videos/Ride Your Wave in cinemas on February 27th! (720p).mp4" type="video/mp4">
+      <source src="videos/Ride Your Wave in cinemas on February 27th! (720p).mp4" type="video/mp4">
     </video>
     <p id="g">"Ride Your Wave" is a Japanese animated film directed by Masaaki Yuasa. It tells the story of a young woman named Hinako who discovers a deep connection with water and falls in love with a firefighter named Minato. Tragedy strikes, and Hinako learns to cope with loss, finding solace and strength through her unique ability.
     <br /><center><b>
@@ -140,7 +140,7 @@
   <div class="CD">
     <h2 id="e">Spirited Away</h2>
     <video id="f"controls >
-      <source src="/videos/Spirited Away - Official Trailer (720p).mp4" type="video/mp4">
+      <source src="videos/Spirited Away - Official Trailer (720p).mp4" type="video/mp4">
     </video>
     <p id="g">The story follows Chihiro, a young girl who becomes trapped in a mysterious and magical world. To rescue her parents and find her way home, Chihiro must navigate this fantastical realm, encountering strange creatures and facing various challenges. The film is known for its enchanting visuals, rich storytelling, and themes of resilience and self-discovery.<br />
     <center><b>
@@ -157,7 +157,7 @@
   <div class="CD">
     <h2 id="e">Suzume</h2>
     <video id="f" controls >
-      <source src="/videos/Suzume.mp4" type="video/mp4">
+      <source src="videos/Suzume.mp4" type="video/mp4">
     </video>
     <p id="g">As the skies turn red and the planet trembles, Japan stands on the brink of disaster. However, a determined teenager named Suzume sets out on a mission to save her country. Able to see supernatural forces that others cannot, it's up to her to close the mysterious doors that are spreading chaos across the land. A perilous journey awaits as the fate of Japan rests on her shoulders.
     <br /><center><b>
@@ -175,7 +175,7 @@
 <div class="CD">
     <h2 id="e">The Garden of Words</h2>
     <video id="f" controls >
-      <source src="/videos/The Garden of Words_ Trailer (720p).mp4" type="video/mp4">
+      <source src="videos/The Garden of Words_ Trailer (720p).mp4" type="video/mp4">
     </video>
     <p id="g">"The Garden of Words" is a Japanese animated film directed by Makoto Shinkai. Released in 2013, it tells a poignant story of a high school student, Takao, who aspires to be a shoemaker, and a mysterious woman, Yukari, whom he meets in a Tokyo garden on rainy mornings. The film explores themes of love, loneliness, and the impact of human connections in a visually stunning way. <br />
     <center><b>
@@ -191,7 +191,7 @@
   <div class="CD">
     <h2 id="e">Weathering With You</h2>
     <video id="f" controls >
-      <source src="/videos/WWyou.mp4" type="video/mp4">
+      <source src="videos/WWyou.mp4" type="video/mp4">
     </video>
     <p id="g">"Weathering with You" is a Japanese animated film directed by Makoto Shinkai. Released in 2019, it follows the story of a high school boy who meets a girl with the ability to control the weather. The film explores themes of love, sacrifice, and the impact of human actions on the environment. Beautifully animated, it's known for its emotional storytelling and stunning visuals.<br />
     <center><b>
@@ -207,7 +207,7 @@
   <div class="CD">
     <h2 id="e">Your Name</h2>
     <video id="f"controls >
-      <source src="/videos/Your Name (Japanese) - Coming Soon Trailer (720p).mp4" type="video/mp4">
+      <source src="videos/Your Name (Japanese) - Coming Soon Trailer (720p).mp4" type="video/mp4">
     </video>
     <p id="g">Two teenagers share a profound, magical connection upon discovering they are swapping bodies. Things manage to become even more complicated when the boy and girl decide to meet in person. <br />
     <center><b>
